--- a/index.html
+++ b/index.html
@@ -187,8 +187,7 @@
                         <div class="m1" style="width: 80%;"></div>
                         <div class="m2" style="right: 20%;"></div>
                     </div>
-                    </div>
-                    
+                    </div>  
                     <img src="assets/img/star.png" class="star-icon" width="17px" height="17px" />
                 </div>               
             </div>
@@ -198,11 +197,11 @@
         <div class="right-column">
             <!-- Debut Div experiences personnelles-->
             <div class="experience experience-mobile">
-                <div class="header-experience header-experience-mobile">               
-                    <div class="title-experience title-experience-mobile">
-                        <img src="assets/img/company.png" class="company-icon" />                   
-                            <h1 class="head-title head-title-mobile">Expérience proféssionnelle</h1>
-                            <label class="sub-title sub-title-mobile"><i>Expertise en entreprise</i></label>                   
+                <div class="header-experience header-experience-mobile"> 
+                    <img src="assets/img/company.png" class="company-icon" />               
+                    <div class="title-experience title-experience-mobile">                                  
+                        <h1 class="head-title-experience head-title-mobile">Expérience proféssionnelle</h1>
+                        <label class="sub-title sub-title-mobile"><i>Expertise en entreprise</i></label>                   
                     </div>
                     
                     <img src="assets/img/menu_pointiller.png" class="menu_pointiller-icon-experience" />
@@ -264,8 +263,8 @@
             <!-- Debut Div cursus academique-->
             <div class="cursus-academique cursus-academique-mobile">   
                 <div class="header-cursus header-cursus-mobile">
+                    <img src="assets/img/student.png" class="student-icon" />
                     <div class="title-cursus title-cursus-mobile">
-                        <img src="assets/img/student.png" class="student-icon" />
                         <h1 class="head-title-cursus head-title-mobile">Cursus academique</h1>
                         <label class="sub-title-cursus sub-title-mobile"><i>Diplome et formation certifiantes</i></label>
                     </div> 
@@ -277,11 +276,11 @@
                 <div class="divider-black divider-black-mobile"></div>
 
                 <p class="sub-title sub-title-mobile">Oracle Certified Associate - <b>@Kentix Sarl</b></p>
-                <p class="sub-title-blue sub-title-blue-mobile">Mars 2009- <i>Oracle Database 11g Administration</i></p>
+                <p class="sub-title-blue sub-title-blue-mobile">Mars 2009 - <i>Oracle Database 11g Administration</i></p>
                 <div class="divider-black divider-black-mobile"></div>
 
                 <p class="sub-title sub-title-mobile">Oracle SQL Certified - <b>@Kentix Sarl</b></p>
-                <p class="sub-title-blue sub-title-blue-mobile">Décembre 2008- <i>SQL 2, SQL3, XML</i></p>
+                <p class="sub-title-blue sub-title-blue-mobile">Décembre 2008 - <i>SQL 2, SQL3, XML</i></p>
                 <div class="divider-black divider-black-mobile"></div>
 
                 <p class="sub-title sub-title-mobile">Licence professionnelle - <b>@Douala Institute of Tech.</b></p>
@@ -293,11 +292,15 @@
                 <div class="divider-black divider-black-mobile"></div>
 
                 <p class="sub-title sub-title-mobile">Baccalauréat - <b>@Lycée Technique de Douala Bassa</b></p>
-                <p class="sub-title-blue sub-title-blue-mobile">Juin 2005- <i>Electrotechnique, mention BIEN</i></p>
+                <p class="sub-title-blue sub-title-blue-mobile">Juin 2005 - <i>Electrotechnique, mention BIEN</i></p>
                 <div class="divider-black divider-black-mobile"></div>
 
                 <p class="sub-title sub-title-mobile">DIPET 2 Electronique - <b>@ENSET de douala</b></p>
                 <p class="sub-title-blue sub-title-blue-mobile">Aout 2016 - <i>Gestion d'éclairage d'une maison (Android + Arduino)</i></p>
+                <div class="divider-black divider-black-mobile"></div>
+
+                <p class="sub-title sub-title-mobile">Baccalauréat - <b>@Lycée Technique de Douala Bassa</b></p>
+                <p class="sub-title-blue sub-title-blue-mobile">Juin 2005 - <i>Electrotechnique, mention BIEN</i></p>
                 </div>
             </div><!-- Fin Div cursus academique-->
         </div>
